# claco.pinochle

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml
commands/: games.go  service.go  utilities.go
db/migrate/: 20230213233947_create-games.down.sql  20230213233947_create-games.up.sql
files/etc/: group  passwd
pb/: pinochle.pb.go  pinochle.swagger.json  pinochle_grpc.pb.go
protos/: pinochle.proto
service/: games.go  health.go  servicer.go  servicer_test.go
src/python/pinochle/cli/: __init__.py
src/python/pinochle/cli/commands/: __init__.py  game.py  service.py
src/python/pinochle/grpc/: __init__.py  pinochle.pb  pinochle.swagger.json  pinochle_pb2.py  pinochle_pb2.pyi  pinochle_pb2_grpc.py  servicers.py  services.py
src/python/pinochle/testing/: fixtures.py
src/python/tests/: conftest.py
src/python/tests/grpc/: test_board.py  test_card.py  test_deck.py  test_game.py  test_meld.py  test_player.py  test_service.py
